yisql-dsl/src/main/java/com/zhy/yisql/dsl/parser/DSLSQLParser.java
// Generated from /Users/zhouhongyi/Documents/my_workspace/yisql/yisql-dsl/src/main/resources/DSLSQL.g4 by ANTLR 4.9.1

package com.zhy.yisql.dsl.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DSLSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, AS=11, INTO=12, LOAD=13, SAVE=14, SELECT=15, INSERT=16, CREATE=17, 
		DROP=18, REFRESH=19, SET=20, CONNECT=21, TRAIN=22, RUN=23, PREDICT=24, 
		REGISTER=25, UNREGISTER=26, INCLUDE=27, OPTIONS=28, WHERE=29, PARTITIONBY=30, 
		OVERWRITE=31, APPEND=32, ERRORIfExists=33, IGNORE=34, COMPLETE=35, UPDATE=36, 
		STRING=37, BLOCK_STRING=38, IDENTIFIER=39, BACKQUOTED_IDENTIFIER=40, EXECUTE_COMMAND=41, 
		EXECUTE_TOKEN=42, SIMPLE_COMMENT=43, BRACKETED_EMPTY_COMMENT=44, BRACKETED_COMMENT=45, 
		WS=46, UNRECOGNIZED=47;
	public static final int
		RULE_statement = 0, RULE_sql = 1, RULE_as = 2, RULE_into = 3, RULE_saveMode = 4, 
		RULE_where = 5, RULE_whereExpressions = 6, RULE_overwrite = 7, RULE_append = 8, 
		RULE_errorIfExists = 9, RULE_ignore = 10, RULE_complete = 11, RULE_update = 12, 
		RULE_booleanExpression = 13, RULE_expression = 14, RULE_ender = 15, RULE_format = 16, 
		RULE_path = 17, RULE_commandValue = 18, RULE_rawCommandValue = 19, RULE_setValue = 20, 
		RULE_setKey = 21, RULE_db = 22, RULE_asTableName = 23, RULE_tableName = 24, 
		RULE_functionName = 25, RULE_colGroup = 26, RULE_col = 27, RULE_qualifiedName = 28, 
		RULE_identifier = 29, RULE_strictIdentifier = 30, RULE_quotedIdentifier = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"statement", "sql", "as", "into", "saveMode", "where", "whereExpressions", 
			"overwrite", "append", "errorIfExists", "ignore", "complete", "update", 
			"booleanExpression", "expression", "ender", "format", "path", "commandValue", 
			"rawCommandValue", "setValue", "setKey", "db", "asTableName", "tableName", 
			"functionName", "colGroup", "col", "qualifiedName", "identifier", "strictIdentifier", 
			"quotedIdentifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "';'", "'='", "'and'", "'-'", "'/'", "'>'", "'<'", "'~'", 
			"','", "'as'", "'into'", "'load'", "'save'", "'select'", "'insert'", 
			"'create'", "'drop'", "'refresh'", "'set'", "'connect'", "'train'", "'run'", 
			"'predict'", "'register'", "'unregister'", "'include'", "'options'", 
			"'where'", null, "'overwrite'", "'append'", "'errorIfExists'", "'ignore'", 
			"'complete'", "'update'", null, null, null, null, null, "'!'", null, 
			"'/**/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "AS", 
			"INTO", "LOAD", "SAVE", "SELECT", "INSERT", "CREATE", "DROP", "REFRESH", 
			"SET", "CONNECT", "TRAIN", "RUN", "PREDICT", "REGISTER", "UNREGISTER", 
			"INCLUDE", "OPTIONS", "WHERE", "PARTITIONBY", "OVERWRITE", "APPEND", 
			"ERRORIfExists", "IGNORE", "COMPLETE", "UPDATE", "STRING", "BLOCK_STRING", 
			"IDENTIFIER", "BACKQUOTED_IDENTIFIER", "EXECUTE_COMMAND", "EXECUTE_TOKEN", 
			"SIMPLE_COMMENT", "BRACKETED_EMPTY_COMMENT", "BRACKETED_COMMENT", "WS", 
			"UNRECOGNIZED"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DSLSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DSLSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StatementContext extends ParserRuleContext {
		public List<SqlContext> sql() {
			return getRuleContexts(SqlContext.class);
		}
		public SqlContext sql(int i) {
			return getRuleContext(SqlContext.class,i);
		}
		public List<EnderContext> ender() {
			return getRuleContexts(EnderContext.class);
		}
		public EnderContext ender(int i) {
			return getRuleContext(EnderContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLSQLListener ) ((DSLSQLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLSQLListener ) ((DSLSQLListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSLSQLVisitor ) return ((DSLSQLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOAD) | (1L << SAVE) | (1L << SELECT) | (1L << INSERT) | (1L << CREATE) | (1L << DROP) | (1L << REFRESH) | (1L << SET) | (1L << CONNECT) | (1L << TRAIN) | (1L << RUN) | (1L << PREDICT) | (1L << REGISTER) | (1L << UNREGISTER) | (1L << INCLUDE) | (1L << EXECUTE_COMMAND) | (1L << SIMPLE_COMMENT))) != 0)) {
				{
				{
				setState(64);
				sql();
				setState(65);
				ender();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SqlContext extends ParserRuleContext {
		public TerminalNode LOAD() { return getToken(DSLSQLParser.LOAD, 0); }
		public FormatContext format() {
			return getRuleContext(FormatContext.class,0);
		}
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public AsContext as() {
			return getRuleContext(AsContext.class,0);
		}
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public WhereContext where() {
			return getRuleContext(WhereContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<BooleanExpressionContext> booleanExpression() {
			return getRuleContexts(BooleanExpressionContext.class);
		}
		public BooleanExpressionContext booleanExpression(int i) {
			return getRuleContext(BooleanExpressionContext.class,i);
		}
		public TerminalNode SAVE() { return getToken(DSLSQLParser.SAVE, 0); }
		public List<OverwriteContext> overwrite() {
			return getRuleContexts(OverwriteContext.class);
		}
		public OverwriteContext overwrite(int i) {
			return getRuleContext(OverwriteContext.class,i);
		}
		public List<AppendContext> append() {
			return getRuleContexts(AppendContext.class);
		}
		public AppendContext append(int i) {
			return getRuleContext(AppendContext.class,i);
		}
		public List<ErrorIfExistsContext> errorIfExists() {
			return getRuleContexts(ErrorIfExistsContext.class);
		}
		public ErrorIfExistsContext errorIfExists(int i) {
			return getRuleContext(ErrorIfExistsContext.class,i);
		}
		public List<IgnoreContext> ignore() {
			return getRuleContexts(IgnoreContext.class);
		}
		public IgnoreContext ignore(int i) {
			return getRuleContext(IgnoreContext.class,i);
		}
		public List<CompleteContext> complete() {
			return getRuleContexts(CompleteContext.class);
		}
		public CompleteContext complete(int i) {
			return getRuleContext(CompleteContext.class,i);
		}
		public List<UpdateContext> update() {
			return getRuleContexts(UpdateContext.class);
		}
		public UpdateContext update(int i) {
			return getRuleContext(UpdateContext.class,i);
		}
		public TerminalNode PARTITIONBY() { return getToken(DSLSQLParser.PARTITIONBY, 0); }
		public ColContext col() {
			return getRuleContext(ColContext.class,0);
		}
		public List<ColGroupContext> colGroup() {
			return getRuleContexts(ColGroupContext.class);
		}
		public ColGroupContext colGroup(int i) {
			return getRuleContext(ColGroupContext.class,i);
		}
		public TerminalNode SELECT() { return getToken(DSLSQLParser.SELECT, 0); }
		public TerminalNode INSERT() { return getToken(DSLSQLParser.INSERT, 0); }
		public TerminalNode CREATE() { return getToken(DSLSQLParser.CREATE, 0); }
		public TerminalNode DROP() { return getToken(DSLSQLParser.DROP, 0); }
		public TerminalNode REFRESH() { return getToken(DSLSQLParser.REFRESH, 0); }
		public TerminalNode SET() { return getToken(DSLSQLParser.SET, 0); }
		public SetKeyContext setKey() {
			return getRuleContext(SetKeyContext.class,0);
		}
		public SetValueContext setValue() {
			return getRuleContext(SetValueContext.class,0);
		}
		public TerminalNode CONNECT() { return getToken(DSLSQLParser.CONNECT, 0); }
		public DbContext db() {
			return getRuleContext(DbContext.class,0);
		}
		public TerminalNode TRAIN() { return getToken(DSLSQLParser.TRAIN, 0); }
		public TerminalNode RUN() { return getToken(DSLSQLParser.RUN, 0); }
		public TerminalNode PREDICT() { return getToken(DSLSQLParser.PREDICT, 0); }
		public IntoContext into() {
			return getRuleContext(IntoContext.class,0);
		}
		public List<AsTableNameContext> asTableName() {
			return getRuleContexts(AsTableNameContext.class);
		}
		public AsTableNameContext asTableName(int i) {
			return getRuleContext(AsTableNameContext.class,i);
		}
		public TerminalNode REGISTER() { return getToken(DSLSQLParser.REGISTER, 0); }
		public FunctionNameContext functionName() {
			return getRuleContext(FunctionNameContext.class,0);
		}
		public TerminalNode UNREGISTER() { return getToken(DSLSQLParser.UNREGISTER, 0); }
		public TerminalNode INCLUDE() { return getToken(DSLSQLParser.INCLUDE, 0); }
		public TerminalNode EXECUTE_COMMAND() { return getToken(DSLSQLParser.EXECUTE_COMMAND, 0); }
		public List<CommandValueContext> commandValue() {
			return getRuleContexts(CommandValueContext.class);
		}
		public CommandValueContext commandValue(int i) {
			return getRuleContext(CommandValueContext.class,i);
		}
		public List<RawCommandValueContext> rawCommandValue() {
			return getRuleContexts(RawCommandValueContext.class);
		}
		public RawCommandValueContext rawCommandValue(int i) {
			return getRuleContext(RawCommandValueContext.class,i);
		}
		public TerminalNode SIMPLE_COMMENT() { return getToken(DSLSQLParser.SIMPLE_COMMENT, 0); }
		public SqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLSQLListener ) ((DSLSQLListener)listener).enterSql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLSQLListener ) ((DSLSQLListener)listener).exitSql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSLSQLVisitor ) return ((DSLSQLVisitor<? extends T>)visitor).visitSql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlContext sql() throws RecognitionException {
		SqlContext _localctx = new SqlContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sql);
		int _la;
		try {
			int _alt;
			setState(293);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LOAD:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(LOAD);
				setState(73);
				format();
				setState(74);
				match(T__0);
				setState(75);
				path();
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPTIONS || _la==WHERE) {
					{
					setState(76);
					where();
					}
				}

				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER || _la==BACKQUOTED_IDENTIFIER) {
					{
					setState(79);
					expression();
					}
				}

				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(82);
					booleanExpression();
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(88);
				as();
				setState(89);
				tableName();
				}
				break;
			case SAVE:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(SAVE);
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OVERWRITE) | (1L << APPEND) | (1L << ERRORIfExists) | (1L << IGNORE) | (1L << COMPLETE) | (1L << UPDATE))) != 0)) {
					{
					setState(98);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case OVERWRITE:
						{
						setState(92);
						overwrite();
						}
						break;
					case APPEND:
						{
						setState(93);
						append();
						}
						break;
					case ERRORIfExists:
						{
						setState(94);
						errorIfExists();
						}
						break;
					case IGNORE:
						{
						setState(95);
						ignore();
						}
						break;
					case COMPLETE:
						{
						setState(96);
						complete();
						}
						break;
					case UPDATE:
						{
						setState(97);
						update();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(102);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(103);
				tableName();
				setState(104);
				as();
				setState(105);
				format();
				setState(106);
				match(T__0);
				setState(107);
				path();
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPTIONS || _la==WHERE) {
					{
					setState(108);
					where();
					}
				}

				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER || _la==BACKQUOTED_IDENTIFIER) {
					{
					setState(111);
					expression();
					}
				}

				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(114);
					booleanExpression();
					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PARTITIONBY) {
					{
					setState(120);
					match(PARTITIONBY);
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==IDENTIFIER || _la==BACKQUOTED_IDENTIFIER) {
						{
						setState(121);
						col();
						}
					}

					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__9) {
						{
						{
						setState(124);
						colGroup();
						}
						}
						setState(129);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				match(SELECT);
				setState(136);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(133);
						_la = _input.LA(1);
						if ( _la <= 0 || (_la==T__1) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						} 
					}
					setState(138);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(139);
					as();
					setState(140);
					tableName();
					}
				}

				}
				break;
			case INSERT:
				enterOuterAlt(_localctx, 4);
				{
				setState(144);
				match(INSERT);
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << AS) | (1L << INTO) | (1L << LOAD) | (1L << SAVE) | (1L << SELECT) | (1L << INSERT) | (1L << CREATE) | (1L << DROP) | (1L << REFRESH) | (1L << SET) | (1L << CONNECT) | (1L << TRAIN) | (1L << RUN) | (1L << PREDICT) | (1L << REGISTER) | (1L << UNREGISTER) | (1L << INCLUDE) | (1L << OPTIONS) | (1L << WHERE) | (1L << PARTITIONBY) | (1L << OVERWRITE) | (1L << APPEND) | (1L << ERRORIfExists) | (1L << IGNORE) | (1L << COMPLETE) | (1L << UPDATE) | (1L << STRING) | (1L << BLOCK_STRING) | (1L << IDENTIFIER) | (1L << BACKQUOTED_IDENTIFIER) | (1L << EXECUTE_COMMAND) | (1L << EXECUTE_TOKEN) | (1L << SIMPLE_COMMENT) | (1L << BRACKETED_EMPTY_COMMENT) | (1L << BRACKETED_COMMENT) | (1L << WS) | (1L << UNRECOGNIZED))) != 0)) {
					{
					{
					setState(145);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==T__1) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case CREATE:
				enterOuterAlt(_localctx, 5);
				{
				setState(151);
				match(CREATE);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << AS) | (1L << INTO) | (1L << LOAD) | (1L << SAVE) | (1L << SELECT) | (1L << INSERT) | (1L << CREATE) | (1L << DROP) | (1L << REFRESH) | (1L << SET) | (1L << CONNECT) | (1L << TRAIN) | (1L << RUN) | (1L << PREDICT) | (1L << REGISTER) | (1L << UNREGISTER) | (1L << INCLUDE) | (1L << OPTIONS) | (1L << WHERE) | (1L << PARTITIONBY) | (1L << OVERWRITE) | (1L << APPEND) | (1L << ERRORIfExists) | (1L << IGNORE) | (1L << COMPLETE) | (1L << UPDATE) | (1L << STRING) | (1L << BLOCK_STRING) | (1L << IDENTIFIER) | (1L << BACKQUOTED_IDENTIFIER) | (1L << EXECUTE_COMMAND) | (1L << EXECUTE_TOKEN) | (1L << SIMPLE_COMMENT) | (1L << BRACKETED_EMPTY_COMMENT) | (1L << BRACKETED_COMMENT) | (1L << WS) | (1L << UNRECOGNIZED))) != 0)) {
					{
					{
					setState(152);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==T__1) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case DROP:
				enterOuterAlt(_localctx, 6);
				{
				setState(158);
				match(DROP);
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << AS) | (1L << INTO) | (1L << LOAD) | (1L << SAVE) | (1L << SELECT) | (1L << INSERT) | (1L << CREATE) | (1L << DROP) | (1L << REFRESH) | (1L << SET) | (1L << CONNECT) | (1L << TRAIN) | (1L << RUN) | (1L << PREDICT) | (1L << REGISTER) | (1L << UNREGISTER) | (1L << INCLUDE) | (1L << OPTIONS) | (1L << WHERE) | (1L << PARTITIONBY) | (1L << OVERWRITE) | (1L << APPEND) | (1L << ERRORIfExists) | (1L << IGNORE) | (1L << COMPLETE) | (1L << UPDATE) | (1L << STRING) | (1L << BLOCK_STRING) | (1L << IDENTIFIER) | (1L << BACKQUOTED_IDENTIFIER) | (1L << EXECUTE_COMMAND) | (1L << EXECUTE_TOKEN) | (1L << SIMPLE_COMMENT) | (1L << BRACKETED_EMPTY_COMMENT) | (1L << BRACKETED_COMMENT) | (1L << WS) | (1L << UNRECOGNIZED))) != 0)) {
					{
					{
					setState(159);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==T__1) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case REFRESH:
				enterOuterAlt(_localctx, 7);
				{
				setState(165);
				match(REFRESH);
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << AS) | (1L << INTO) | (1L << LOAD) | (1L << SAVE) | (1L << SELECT) | (1L << INSERT) | (1L << CREATE) | (1L << DROP) | (1L << REFRESH) | (1L << SET) | (1L << CONNECT) | (1L << TRAIN) | (1L << RUN) | (1L << PREDICT) | (1L << REGISTER) | (1L << UNREGISTER) | (1L << INCLUDE) | (1L << OPTIONS) | (1L << WHERE) | (1L << PARTITIONBY) | (1L << OVERWRITE) | (1L << APPEND) | (1L << ERRORIfExists) | (1L << IGNORE) | (1L << COMPLETE) | (1L << UPDATE) | (1L << STRING) | (1L << BLOCK_STRING) | (1L << IDENTIFIER) | (1L << BACKQUOTED_IDENTIFIER) | (1L << EXECUTE_COMMAND) | (1L << EXECUTE_TOKEN) | (1L << SIMPLE_COMMENT) | (1L << BRACKETED_EMPTY_COMMENT) | (1L << BRACKETED_COMMENT) | (1L << WS) | (1L << UNRECOGNIZED))) != 0)) {
					{
					{
					setState(166);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==T__1) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(171);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case SET:
				enterOuterAlt(_localctx, 8);
				{
				setState(172);
				match(SET);
				setState(173);
				setKey();
				setState(174);
				match(T__2);
				setState(175);
				setValue();
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPTIONS || _la==WHERE) {
					{
					setState(176);
					where();
					}
				}

				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER || _la==BACKQUOTED_IDENTIFIER) {
					{
					setState(179);
					expression();
					}
				}

				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(182);
					booleanExpression();
					}
					}
					setState(187);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case CONNECT:
				enterOuterAlt(_localctx, 9);
				{
				setState(188);
				match(CONNECT);
				setState(189);
				format();
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPTIONS || _la==WHERE) {
					{
					setState(190);
					where();
					}
				}

				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER || _la==BACKQUOTED_IDENTIFIER) {
					{
					setState(193);
					expression();
					}
				}

				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(196);
					booleanExpression();
					}
					}
					setState(201);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(205);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(202);
					as();
					setState(203);
					db();
					}
				}

				}
				break;
			case TRAIN:
			case RUN:
			case PREDICT:
				enterOuterAlt(_localctx, 10);
				{
				setState(207);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRAIN) | (1L << RUN) | (1L << PREDICT))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(208);
				tableName();
				setState(211);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AS:
					{
					setState(209);
					as();
					}
					break;
				case INTO:
					{
					setState(210);
					into();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(213);
				format();
				setState(214);
				match(T__0);
				setState(215);
				path();
				setState(217);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPTIONS || _la==WHERE) {
					{
					setState(216);
					where();
					}
				}

				setState(220);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER || _la==BACKQUOTED_IDENTIFIER) {
					{
					setState(219);
					expression();
					}
				}
